<resources>
    <string name="app_name">OrthoView</string>
    <string name="label_folder_name">Ordnername</string>
    <string name="hint_folder_name">z. B. Patientenname</string>
    <string name="record_side">Seitenaufnahme</string>
    <string name="record_front">Frontaufnahme</string>
    <string name="view_videos">Videos anzeigen</string>
    <string name="tutorial">Tutorial</string>
    <string name="start_recording">Aufnahme starten</string>
    <string name="open_storage">Speicher öffnen</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="enter_folder_name">Bitte einen Ordnernamen eingeben</string>
    <string name="error_creating_video">Fehler beim Erstellen der Videodatei</string>
    <string name="permission_denied">Berechtigung verweigert!</string>
    <string name="select_folder">Ordner auswählen, um Videos anzuzeigen</string>
    <string name="no_folders_found">Keine Ordner gefunden!</string>
    <string name="select_video">Video auswählen, um es anzusehen</string>
    <string name="no_videos_found">Keine Videos in diesem Ordner gefunden!</string>
    <string name="delete_folder_message">Sind Sie sicher, dass Sie diesen Ordner und alle seine Inhalte löschen möchten?</string>
    <string name="delete_video_message">Sind Sie sicher, dass Sie dieses Video löschen möchten?</string>
    <string name="delete_folder">Ordner löschen</string>
    <string name="delete_video">Video löschen</string>
    <string name="folder_deleted">Ordner gelöscht</string>
    <string name="folder_delete_failed">Fehler beim Löschen des Ordners</string>
    <string name="video_deleted">Video gelöscht</string>
    <string name="video_delete_failed">Fehler beim Löschen des Videos</string>
</resources>
