<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_folder_name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_folder_name" />

        <Button
            android:id="@+id/btnRecordSide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_side" />

        <Button
            android:id="@+id/btnRecordFront"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_front" />

        <Button
            android:id="@+id/btnViewVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_videos" />

        <Button
            android:id="@+id/btnVideoTutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
